<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">
    
    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_placeholder">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/send_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:text="@string/send"
            android:onClick="onSendButtonClicked"
            />

        <Button
            android:id="@+id/share_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:text="@string/share"
            android:onClick="OnShareButtonClicked"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_map_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/map_placeholder">
    </EditText>
    <Button
        android:id="@+id/search_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:text="@string/search"
        android:onClick="OnSearchButtonClicked"
        />

</LinearLayout>